Add option to notify systemd on startup
Because this loads a native library, it requires Java 21 with preview features enables.